# spotifyPlaylistBackups

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
config/: config.example.yaml
docs/: ARCHITECTURE.md  BRANCH_PROTECTION.md  CI.md  CONFIG.md  DROPBOX_AUTH.md  DROPBOX_CLIENT.md  EXPORT.md  INDEX.md  SETUP.md  SPOTIFY_AUTH.md  SPOTIFY_CLIENT.md  USAGE.md
docs/planning/: TASK_MANAGEMENT.md
scripts/: authorize_dropbox.py
scripts/github/: branch-protection-config.json  setup-branch-protection.sh
src/: __init__.py  main.py
src/backup/: __init__.py  differ.py  exporter.py  service.py
src/config/: __init__.py  settings.py
src/dropbox/: __init__.py  auth.py  client.py
src/spotify/: __init__.py  auth.py  client.py  models.py
tests/: __init__.py  test_backup_differ.py  test_backup_service.py  test_dropbox_auth.py  test_dropbox_client.py  test_exporter.py  test_main.py  test_settings.py  test_spotify_auth.py  test_spotify_client.py  test_spotify_models.py
